# yafowil.lingua

./: .gitignore  CHANGES.rst  HISTORY.rst  README.rst  mx.ini  pyproject.toml  setup.py
src/yafowil/lingua/: extract.py  extractor.py  extractor.rst
