[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil.lingua"
version = "1.0.1.dev0"
description = "YAFOWIL - Lingua message extrator for yafowil.yaml based forms."
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["html", "input", "widgets", "form", "compound"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "PyYAML",
    "lingua>=2.5",
]

[project.entry-points."lingua.extractors"]
yafowil_yaml = "yafowil.lingua.extractor:YafowilYamlExtractor"

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]
[tool.zest-releaser]
create-wheel = true
